--- a/.github/workflows/compute.yml
+++ b/.github/workflows/compute.yml
@@ -9,6 +9,7 @@ env:
         "8.1"
         "8.2"
         "8.3"
+        "8.4"
     TYPO3: |
         "^10.4"
         "^11.5"
@@ -35,6 +36,10 @@ env:
                 "typo3": "^10.4",
                 "php": "8.3",
             },
+            "10.4-8.4": {
+                "typo3": "^10.4",
+                "php": "8.4",
+            },
             "10.4.x-dev-8.0": {
                 "typo3": "10.4.x-dev",
                 "php": "8.0",
@@ -50,6 +55,10 @@ env:
             "10.4.x-dev-8.3": {
                 "typo3": "10.4.x-dev",
                 "php": "8.3",
+            },
+            "10.4.x-dev-8.4": {
+                "typo3": "10.4.x-dev",
+                "php": "8.4",
             },
             "12.4-7.4": {
                 "typo3": "^12.4",
